<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Работа с меню</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choice">Выбор</string>
    <string name="main">Основное:</string>
    <string name="wind">Ветер:</string>
    <string name="temp">температура</string>
    <string name="speed">скорость</string>
    <string name="deg">град</string>
    <string name="pressure">давление</string>
    <string name="humidity">влажность</string>
    <string name="descriptionweather">Описание погода</string>
    <string name="tempdata">tempData</string>
    <string name="pressuredata">pressureData</string>
    <string name="humiditydata">humidityData</string>
    <string name="speeddata">speedData</string>
    <string name="degdata">degData</string>
    <string-array name="languages">
        <item>ru</item>
        <item>en</item>
    </string-array>

</resources>